--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
     <!-- inicia nav -->
     <nav class="navbar navbar-expand-lg sticky-top navbar-light"id="botonera" >
-      <a class="navbar-brand" href="indexdesafio sass.html"><img src="img/logoheaderp.png" alt="logo Jen png"></a>
+      <a class="navbar-brand" href="index.html"><img src="img/logoheaderp.png" alt="logo Jen png"></a>
   <div class="container-fluid">
     
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
