--- a/productos.html
+++ b/productos.html
@@ -51,7 +51,7 @@
           <a class="nav-link" href="puntos.html">Puntos Limpios</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="noticiasdesafio.html">Noticias</a>
+          <a class="nav-link active" aria-current="page" href="noticias.html">Noticias</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="index.html#contacto">Contacto</a>
@@ -123,7 +123,7 @@
 			           <h3>Consultoría estratégica</h3>
 				          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste voluptatem quaerat rerum officia, qui magni nemo repudiandae dolorem, beatae reiciendis, nesciunt neque, eligendi? Minus quaerat eligendi modi sequi, laborum eum.
 				          </p>
-				          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste voluptatem quaerat rerum officia, qui magni nemo repudiandae dolorem, beatae reiciendis, nesciunt neque, eligendi? Minus quaerat eligendi modi sequi, laborum eum.Minus quaerat eligendi modi sequi, laborum eum.
+				          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste voluptatem quaerat rerum officia, qui magni nemo repudiandae dolorem, beatae reiciendis, nesciunt neque, eligendi? Minus quaerat eligendi modi sequi, laborum eum.Minus quaerat eligendi modi.
 				          </p>
                 </div>
               </article>
