--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
           <a class="nav-link" href="puntos.html">Puntos Limpios</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="noticiasdesafio.html">Noticias</a>
+          <a class="nav-link active" aria-current="page" href="noticias.html">Noticias</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="index.html#contacto">Contacto</a>
