--- a/creemos.html
+++ b/creemos.html
@@ -106,7 +106,7 @@
 	  <main id="main">
 		<h1 class="textCenter contacto">¿En qué creemos?</h1>
 
-		<section class="somos">
+		<section class="creemos">
 			
 				<article class="textJust">
 				
@@ -119,18 +119,18 @@ Regenerar sistemas naturales
 		<img src="img/circular.png" alt="Economía Circular">	
 		</section>
 		<h1 class="textCenter contacto">Objetivos Desarrollo Sostenible</h1>
-		<section class="somos">
+		<section class="creemos">
 			
 				<article class="textJust">
 				
-			<p>Creemos que para avanzar con la Economía Circular es fundamental utilizar un lenguaje alineado de forma global y así abordar los problemas locales. Por eso, nuestras soluciones parten de premisas bien estructuradas por instituciones y organismos internacionales, que sirven de parámetro para todos los involucrados en esta misión:
+			<p>Creemos que para avanzar con la Economía Circular es fundamental utilizar un lenguaje alineado de forma global y así abordar los problemas locales. Por eso, nuestras soluciones parten de premisas bien estructuradas por instituciones y organismos internacionales, que sirven de parámetro para todos los involucrados en esta misión: <br>
 
-ODSs (Objetivos de Desarrollo Sostenible) de laONU.
-Fundación Ellen MacArthur.
-Firmamos el Pacto Global para los plásticos.
-Somos certificados en el concepto Cradle to Cradle de Economía Circular.</p><br>
+-ODSs (Objetivos de Desarrollo Sostenible) de la ONU. <br>
+-Fundación Ellen MacArthur. <br>
+-Firmamos el Pacto Global para los plásticos. <br>
+-Somos certificados en el concepto Cradle to Cradle de Economía Circular.</p>
 
-			<img src="img/sostenible.png" alt="Desarrollo Sostenible" class="w-75 center">
+			<img src="img/sostenible.png" alt="Desarrollo Sostenible">
 		</section>
 		
 		<br><br>
