--- a/nosotros.html
+++ b/nosotros.html
@@ -131,9 +131,8 @@
 <footer class="text-secondary text-center text-uppercase py-3">
   <h3>Redes Sociales</h3>
     <img src="img/insta.png" alt="Instagram">
-    <img src="img/fb.jpg" alt="Facebook">
-    <img src="img/LinkedIN.png" alt="Linkedin">
-  
+    <img src="img/fb.png" alt="Facebook">
+    <img src="img/linkedin.png" alt="Linkedin">
 </footer>
     <!-- Option 1: Bootstrap Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
