--- a/productos.html
+++ b/productos.html
@@ -121,7 +121,7 @@
               <article class="col-sm-12 col-lg-4 ">
 				        <div class="somos">
 			           <h3>Consultoría estratégica</h3>
-                 <img src="img/consultoria.jpg" alt="Consultoría">
+                 <img src="img/consultoria.JPG" alt="Consultoría">
 				          <p>Acompañamos a las organizaciones a transitar hacia la economía circular a través de la adopción de estrategias y el diseño de soluciones que permitan mantener el valor de los recursos el mayor tiempo posible y que respondan a las necesidades del contexto actual.
 				          </p>
 				          <p>Nuestra experiencia y know how nos ha posicionado como especialistas, siendo participantes activas en el ecosistema de la economía circular en Chile, lo que nos ha permitido desarrollar herramientas y visualizar tendencias y cambios que vendrán en torno a sostenibilidad a nivel global y local.
@@ -134,7 +134,7 @@
                 <div class="somos">
 
                  <h3>Educación y Concientización</h3>
-                 <img src="img/educacion.jpg" alt="Educación"> <br>
+                 <img src="img/educacion.JPG" alt="Educación"> <br>
                   <p>¿Qué pasaría si la actual, urgente y necesaria transformación circular, es también impulsada desde las comunidades escolares?, ¿Desde su identidad, entregando herramientas, despertando curiosidad y reconociendo a posibles agentes de cambio?
                   </p>
                   <p>Para ello este curso formativo introductorio, invita y acerca de manera dinámica los principales conceptos de la circularidad en la economía, con el objetivo de convertirse en una herramienta didáctica y de apoyo para desarrollar prácticas pedagógicas basadas en promover estilos de vida sustentables.
@@ -146,7 +146,7 @@
               <article class="col-sm-12 col-lg-4 ">
                 <div class="somos">
                  <h3>Reciclaje y Recolección de Datos</h3>
-                 <img src="img/reciclaje.jpg" alt="Reciclar">
+                 <img src="img/RECICLAJE.JPG" alt="Reciclar">
                   <p>Aquellos residuos recuperados con el reciclaje son reintroducidos en el propio sistema de producción, potenciando un desarrollo económico más equilibrado, sostenible y compatible con el cuidado del medio ambiente”
                   </p>
                   <p>La economía circular encuentra su fundamento en la “potenciación del uso por encima del consumo”, enfocarse en la “reutilización de los bienes y facilitar su reparación y reciclaje”. Reciclar un residuo es mucho mejor que enviarlo a la basura. Sin embargo, antes de reciclar, debes preguntarte, ¿lo puedo utilizar en alguna aplicación alternativa? ¿lo puedo reparar? ¿lo puedo regalar? 
@@ -164,8 +164,8 @@
 <footer class="text-secondary text-center text-uppercase py-3">
   <h3>Redes Sociales</h3>
     <img src="img/insta.png" alt="Instagram">
-    <img src="img/fb.jpg" alt="Facebook">
-    <img src="img/LinkedIN.png" alt="Linkedin">
+    <img src="img/fb.png" alt="Facebook">
+    <img src="img/linkedin.png" alt="Linkedin">
   
 </footer>
     <!-- Option 1: Bootstrap Bundle with Popper -->
