--- a/puntos.html
+++ b/puntos.html
@@ -166,8 +166,8 @@
 <footer class="text-secondary text-center text-uppercase py-3">
   <h3>Redes Sociales</h3>
     <img src="img/insta.png" alt="Instagram">
-    <img src="img/fb.jpg" alt="Facebook">
-    <img src="img/LinkedIN.png" alt="Linkedin">
+    <img src="img/fb.png" alt="Facebook">
+    <img src="img/linkedin.png" alt="Linkedin">
   
 </footer>
     <!-- Option 1: Bootstrap Bundle with Popper -->
